<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8.0dip"
    android:background="#ffffffff"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:layout_marginTop="16.0dip"
        android:text="@string/video_title"
        android:textColor="@color/black"
        android:textSize="20.0sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12.0dip">

        <ImageView
            android:id="@+id/ivStoryThumb"
            android:layout_width="72.0dip"
            android:layout_height="72.0dip"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtStoryName"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="6.0dip"
            android:layout_weight="1.0"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_$ ()"
            android:gravity="center|left"
            android:hint="@string/enter_caption"
            android:inputType="textNoSuggestions"
            android:textSize="16.0sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="52.0dip"
        android:gravity="center|right"
        android:orientation="horizontal"
        android:padding="8.0dip">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="36.0dip"
            android:background="@drawable/btn_viewrect_light"
            android:clickable="true"
            android:padding="8.0dip"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/tvSave"
            android:layout_width="wrap_content"
            android:layout_height="36.0dip"
            android:background="@drawable/btn_viewrect_light"
            android:clickable="true"
            android:padding="8.0dip"
            android:text="@string/save"
            android:textColor="@color/colorPrimary"
            android:textSize="16.0sp" />
    </LinearLayout>
</LinearLayout>