<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/dialog_bg_color"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUsageTips"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10.0dip"
            android:gravity="center"
            android:text="@string/usage_tips"
            android:textColor="@android:color/white"
            android:textSize="18.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginBottom="3.0dip"
            android:layout_marginTop="5.0dip"
            android:background="@color/white_dark"
            android:padding="4.0dip" />

        <LinearLayout
            android:id="@+id/llVibrate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="6.0dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivVibrate"
                android:layout_width="30.0dip"
                android:layout_height="30.0dip"
                android:layout_marginBottom="5.0dip"
                android:layout_marginLeft="10.0dip"
                android:src="@drawable/vibrate" />

            <TextView
                android:id="@+id/tvVibrate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10.0dip"
                android:gravity="left"
                android:text="@string/notification_with_vibration"
                android:textColor="@color/white_dark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFlash"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="16.0dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivFlash"
                android:layout_width="30.0dip"
                android:layout_height="30.0dip"
                android:layout_marginBottom="5.0dip"
                android:layout_marginLeft="10.0dip"
                android:src="@drawable/flash" />

            <TextView
                android:id="@+id/tvFlash"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10.0dip"
                android:gravity="left"
                android:text="Notification With Flash"
                android:textColor="@color/white_dark" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRing"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="16.0dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivRing"
                android:layout_width="30.0dip"
                android:layout_height="30.0dip"
                android:layout_marginBottom="5.0dip"
                android:layout_marginLeft="10.0dip"
                android:src="@drawable/ring" />

            <TextView
                android:id="@+id/tvRingtone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10.0dip"
                android:gravity="left"
                android:text="@string/notification_with_ringtone"
                android:textColor="@color/white_dark" />
        </LinearLayout>

        <Button
            android:id="@+id/btnGotit"
            android:layout_width="120.0dip"
            android:layout_height="40.0dip"
            android:layout_gravity="center"
            android:layout_margin="10.0dip"
            android:background="@drawable/btn_grey_selector"
            android:gravity="center"
            android:text="@string/dialog_ok"
            android:textColor="@color/app_theme_color"
            android:textSize="18.0sp" />
    </LinearLayout>
</LinearLayout>