<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:scaleType="fitXY"
        android:src="@drawable/bg_splash"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btnStartCreate"
        android:layout_marginTop="50dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:gravity="bottom"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/title_icon"
                android:layout_marginBottom="@dimen/_50sdp"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/imgSelectPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgTitle"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/select_photo"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/imgArrow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgSelectPhoto"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="26.0dip"
                android:contentDescription="@string/app_name"
                android:src="@drawable/arrow_1"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/imgAddMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgArrow1"
                android:layout_marginTop="-40.0dip"
                android:layout_toLeftOf="@+id/imgArrow1"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/add_music"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/imgArrow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgAddMusic"
                android:layout_toLeftOf="@+id/imgAddMusic"
                android:contentDescription="@string/app_name"
                android:src="@drawable/arrow_2"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvCreateAccurateFastVideo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStartCreate"
        android:layout_marginRight="6.0dip"
        android:gravity="right"
        android:text="@string/create_accurate_and_fast_video"
        android:textColor="#ffacacac"
        android:textSize="8.0sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnStartCreate"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:layout_alignParentBottom="true"
        android:layout_margin="4.0dip"
        android:background="@drawable/btn_splash_selector"
        android:gravity="center"
        android:text="@string/create_slideshow_with_music"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:visibility="invisible" />
</RelativeLayout>